clang/test/BSC/Negative/Trait/GenericTrait/impl_trait1/impl_trait1.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

trait F<T> { // expected-note {{declared here}}
  T foo(This* this, int a);
};

typedef struct S{
  int x;
}MyS;

int struct S::foo(struct S* this, int a) { 
  return this->x + a;
}

impl trait F for MyS; // expected-error {{template 'F' cannot be referenced with a trait specifier}}